# ssh-bbs

./: .editorconfig  .env.example  .gitignore  .golangci.yml  AGENTS.md  CHECKLIST.md  Cargo.toml  LICENSE  README.md  TDD.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
crates/bbs-ssh-gateway/: Dockerfile  bbs-ssh-gateway  go.mod  go.sum  main.go
crates/bbs-tui/: Cargo.toml
crates/bbs-tui/migrations/: 0001_init.sql  0002_invites.sql
crates/bbs-tui/src/: data.rs  input.rs  invite.rs  it_db.rs  life.rs  main.rs  nick.rs  rate.rs  realtime.rs  rooms.rs  ui.rs  util.rs
